[gd_scene load_steps=3 format=3 uid="uid://bm8n4x7t2vqw5"]

[ext_resource type="Script" uid="uid://dch8fx4kknthk" path="res://GUI/MiniGames/set_theory_puzzle_game.gd" id="1"]
[ext_resource type="FontFile" uid="uid://c8fgo04h80ehc" path="res://GUI/Font/PressStart2P-Regular.ttf" id="2"]

[node name="SetTheoryPuzzleGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.85)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="TitleLabel" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2")
theme_override_font_sizes/normal_font_size = 7
bbcode_enabled = true
text = "Find (A - B) [font_size=12]∪[/font_size] (B - A)"
horizontal_alignment = 1
fit_content = true

[node name="QuestionLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 4
text = "Click all cells that belong to A ∩ B"
horizontal_alignment = 1

[node name="SetInfoLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 4
text = "A = {b, 2, d, 4, e, 5}
B = {a, 1, b, 2, c, 3}"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = -58
theme_override_constants/margin_right = 28
theme_override_constants/margin_bottom = 0

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
columns = 5

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -45.0
offset_right = 70.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 4
alignment = 1

[node name="ClearButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(65, 16)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 4
text = "Clear"

[node name="SubmitButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(65, 16)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 4
text = "Submit"

[node name="FeedbackLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -60.0
offset_right = 120.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 4
horizontal_alignment = 1

[node name="AttemptsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -20.0
offset_right = 80.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 3
text = "Attempts remaining: 3"
horizontal_alignment = 1

[node name="CloseLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -20.0
offset_right = -10.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 3
text = "[ESC] to close"
horizontal_alignment = 2

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.85)

[node name="CenterPanel" type="Panel" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="GameOverPanel/CenterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel/CenterPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="GameOverLabel" type="Label" parent="GameOverPanel/CenterPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 20
text = "GAME OVER"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="GameOverPanel/CenterPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 8
text = "You've run out of hearts!
Better luck next time."
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel/CenterPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 10
text = "Restart"

[node name="MainMenuButton" type="Button" parent="GameOverPanel/CenterPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 10
text = "Main Menu"
